syntax = "proto3";

package user;

option go_package = "github.com/kiribu/financial-tracker/proto/user";

// User Service
service UserService {
  rpc GetOrCreateUser(GetOrCreateUserRequest) returns (UserResponse);
  rpc GetUserByTelegramId(GetUserByTelegramIdRequest) returns (UserResponse);
}

message GetOrCreateUserRequest {
  int64 telegram_id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
}

message GetUserByTelegramIdRequest {
  int64 telegram_id = 1;
}

message UserResponse {
  int64 user_id = 1;
  int64 telegram_id = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string created_at = 6;
}




